--- a/IBRIS_01/nbproject/project.properties
+++ b/IBRIS_01/nbproject/project.properties
@@ -28,6 +28,34 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.apache-mime4j-0.6.jar=lib/apache-mime4j-0.6.jar
+file.reference.commons-beanutils-1.7.jar=lib/commons-beanutils-1.7.jar
+file.reference.commons-codec-1.6.jar=lib/commons-codec-1.6.jar
+file.reference.commons-collections.jar=lib/commons-collections.jar
+file.reference.commons-fileupload-1.2.2.jar=lib/commons-fileupload-1.2.2.jar
+file.reference.commons-io-2.4-javadoc.jar=lib/commons-io-2.4-javadoc.jar
+file.reference.commons-io-2.4-sources.jar=lib/commons-io-2.4-sources.jar
+file.reference.commons-io-2.4-test-sources.jar=lib/commons-io-2.4-test-sources.jar
+file.reference.commons-io-2.4-tests.jar=lib/commons-io-2.4-tests.jar
+file.reference.commons-io-2.4.jar=lib/commons-io-2.4.jar
+file.reference.commons-lang.jar=lib/commons-lang.jar
+file.reference.commons-logging-1.1.1.jar=lib/commons-logging-1.1.1.jar
+file.reference.ezmorph.jar=lib/ezmorph.jar
+file.reference.fluent-hc-4.2.1.jar=lib/fluent-hc-4.2.1.jar
+file.reference.gson-2.2.2-javadoc.jar=lib/gson-2.2.2-javadoc.jar
+file.reference.gson-2.2.2-sources.jar=lib/gson-2.2.2-sources.jar
+file.reference.gson-2.2.2.jar=lib/gson-2.2.2.jar
+file.reference.httpclient-4.2.1.jar=lib/httpclient-4.2.1.jar
+file.reference.httpclient-cache-4.2.1.jar=lib/httpclient-cache-4.2.1.jar
+file.reference.httpcore-4.1.jar=lib/httpcore-4.1.jar
+file.reference.httpcore-4.2.1.jar=lib/httpcore-4.2.1.jar
+file.reference.httpmime-4.2.1.jar=lib/httpmime-4.2.1.jar
+file.reference.javax.system.collection.jar=lib/javax.system.collection.jar
+file.reference.jmimemagic-0.1.0.jar=lib/jmimemagic-0.1.0.jar
+file.reference.json-lib-2.2.2-jdk15.jar=lib/json-lib-2.2.2-jdk15.jar
+file.reference.mime-util-2.1.3-test-sources.jar=lib/mime-util-2.1.3-test-sources.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=lib/mysql-connector-java-5.1.23-bin.jar
+file.reference.org.apache.commons.httpclient.jar=lib/org.apache.commons.httpclient.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -41,7 +69,35 @@ j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.ja
 j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.apache-mime4j-0.6.jar}:\
+    ${file.reference.commons-beanutils-1.7.jar}:\
+    ${file.reference.commons-codec-1.6.jar}:\
+    ${file.reference.commons-collections.jar}:\
+    ${file.reference.commons-fileupload-1.2.2.jar}:\
+    ${file.reference.commons-io-2.4-javadoc.jar}:\
+    ${file.reference.commons-io-2.4-sources.jar}:\
+    ${file.reference.commons-io-2.4-test-sources.jar}:\
+    ${file.reference.commons-io-2.4-tests.jar}:\
+    ${file.reference.commons-io-2.4.jar}:\
+    ${file.reference.commons-lang.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.ezmorph.jar}:\
+    ${file.reference.fluent-hc-4.2.1.jar}:\
+    ${file.reference.gson-2.2.2-javadoc.jar}:\
+    ${file.reference.gson-2.2.2-sources.jar}:\
+    ${file.reference.gson-2.2.2.jar}:\
+    ${file.reference.httpclient-4.2.1.jar}:\
+    ${file.reference.httpclient-cache-4.2.1.jar}:\
+    ${file.reference.httpcore-4.1.jar}:\
+    ${file.reference.httpcore-4.2.1.jar}:\
+    ${file.reference.httpmime-4.2.1.jar}:\
+    ${file.reference.javax.system.collection.jar}:\
+    ${file.reference.jmimemagic-0.1.0.jar}:\
+    ${file.reference.json-lib-2.2.2-jdk15.jar}:\
+    ${file.reference.mime-util-2.1.3-test-sources.jar}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
+    ${file.reference.org.apache.commons.httpclient.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -68,7 +124,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
